# 25ICN_NewsReport

./: .gitignore  Makefile  create_excel.py  extracted_document_info.json  hwp_parser.py  incheon_airport_crawler.py  incheon_press.json  minio_uploader.py  parsed_info_extract.py  pyproject.toml  requirements.txt
config/: config.yml
schema/entity/: news_report_entity.json
script/: generate_model.py
src/: main.py
src/configuration/: __init__.py  config.py
src/crawler/: incheon_airport_crawler.py
src/logger/: __init__.py  logger.py
src/luxia_client/: luxia_client.py
src/parser/: table_parser.py
src/repository/: minio_client.py  pg_client.py
src/schema/entity/: news_report_entity.py  press_article_entity.py
